--- a/app/views/static_pages/landing_page.html.erb
+++ b/app/views/static_pages/landing_page.html.erb
@@ -76,51 +76,59 @@
 					</tr>
 				</table>
 			</div>
+			<div class='clear_float'></div>
 		</div>
 	</div>
 	
-	<div id='strip3'>
-		<div id='strip3_content'>
-			<div id='text_landing_page'>
-				<div class='section'>
-					<div class='image_left'><%= image_tag("Fotolia_healthtech_not_copyright_cleared_small.jpg", size: '288x220') %></div>
-					<h2>Take your health into the 21st century</h2>
-					<p>You may be wondering how it’s possible to treat blood pressure on-line without having to see a doctor or nurse. Well, recent expert advice changed the treatment of blood pressure and made it much more simple... So, doctors created this website to automatically follow this new, improved advice.</p>
-				</div>
-				<div class='clear_float'></div>
-				<div class='section'>
-					<div class='image_right'><%= image_tag("house_not_copyright_cleared_small.jpeg", size: '288x200') %></div>
-					<h2>You can do it all from home</h2>
-					<p>Did you know that up to 30% of people get incorrect high readings when their blood pressure is measured at the doctor's? Not surprisingly, new expert advice recommends that you measure your blood pressure at home. This will give you a more accurate idea of how high your blood pressure is.</p>
-				</div>
-				<div class='clear_float'></div>
-				<div class='section'>
-					<div class='image_left'><%= image_tag("clock_not_copyright_cleared_small.jpg", size: '250x250') %></div>
-					<h2>You will save time</h2>
-					<p>This will save you time. It will also be more convenient for you. Your doctor will benefit too as it will free up their time to deal with more complex problems. Everyone wins!</p>
-				</div>
-				<div class='clear_float'></div>
-				<div class='section'>
-					<div class='image_right'><%= image_tag("measurement_very_close_up.png", size: '288x190') %></div>
-					<h2>Get an accurate measurement of your blood pressure</h2>
-					<p>You can follow our simple instructions to get a highly accurate measurement of your blood pressure using a home blood pressure monitor. You can then securely store your readings in your on-line account so you can access them anytime, anywhere.</p>
-				</div>
-				<div class='clear_float'></div>
-				<div class='section'>
-					<div class='image_left'><%= image_tag("graphic_very_close_up.png", size: '288x190') %></div>
-					<h2>Instantly see how high your blood pressure is</h2>
-					<p>You can quickly and clearly see how high your blood pressure is. You will then get personalised advice from experienced UK GPs to help lower your blood pressure. You can even get prescriptions delivered to your door!</p>
-				</div>
-				<div class='clear_float'></div>
-				<div class='section'>
-					<div class='image_right'><%= image_tag("ask_very_close_up.png", size: '288x190') %></div>
-					<h2>Any questions? Ask a doctor!</h2>
-					<p>You will find answers to your questions on our extensive, friendly information pages. If you have any other questions you can quickly ask us at the click of a button!</p>
-				</div>
-				<div class='clear_float'></div>
+	<div id='box1'>
+		<div class='box_content'>
+			<div class='title'>
+				<h2>Do it all from your home...</h2>
 			</div>
-			
+			<%= image_tag("house_not_copyright_cleared_small.jpeg") %>
+			<p>...or anywhere else that is convenient.</p>
+			<p>Did you know that up to 30% of people get incorrectly high readings when their blood pressure is measured at their doctors?</p>
+			<p>That’s why the latest expert advice recommends that you measure your blood pressure at home.</p>
 		</div>
 	</div>
+	
+	<div id='box2'>
+		<div class='box_content'>
+			<div class='title'>
+				<h2>Save time…</h2>
+			</div>
+			<%= image_tag("clock_not_copyright_cleared_small.jpg") %>
+			<p>Spend less time on the telephone trying to get an appointment. Spend less time in doctor’s waiting rooms.</p>
+			<p>Take control of your blood pressure, and you’ll also take less time off work because you’ll be able to deal with it at a time that suits you.</p>
+		</div>
+	</div>
+	
+	<div id='box3'>
+		<div class='box_content'>
+			<div class='title'>
+				<h2>Get clear advice about how to treat your blood pressure…</h2>
+			</div>
+			<%= image_tag("Fotolia_healthtech_not_copyright_cleared_small.jpg") %>
+			<p>Answer a few simple questions about your medical history and you’ll get clear advice about what to do next.</p>
+			<p>It really is that simple.</p>
+			<p>You’ll be able to make your own decisions about your own treatment in your own time.</p>
+		</div>
+	</div>
+	
+	<div id='box4'>
+		<div class='box_content'>
+			<div class='title'>
+				<h2>Any questions? Ask a doctor!</h2>
+			</div>
+			<%= image_tag("woman_apple_small_3.jpg") %>
+			<p>Recent expert advice has changed the treatment of blood pressure. It has become much more simple.</p>
+			<p>That’s why you can take control of it without seeing a doctor.</p>
+			<p>We are two experienced UK GPs and you’ll find loads of clearly written advice on our website.</p>
+			<p>But don’t worry, if you have any other questions, we’re looking forward to hearing from you. You’ll be able to contact us at the click of a button!</p>
+		</div>
+		<div class='clear_float'></div>
+	</div>
+	
+	
 	
 </div>
