small copy change

--- a/app/views/static_pages/landing_page.html.erb
+++ b/app/views/static_pages/landing_page.html.erb
@@ -98,8 +98,9 @@
 				<h2>Save time…</h2>
 			</div>
 			<%= image_tag("clock_not_copyright_cleared_small.jpg") %>
-			<p>Spend less time on the telephone trying to get an appointment. Spend less time in doctor’s waiting rooms.</p>
-			<p>Take control of your blood pressure, and you’ll also take less time off work because you’ll be able to deal with it at a time that suits you.</p>
+			<p>Spend less time on the telephone trying to get an appointment.</p>
+			<p>Spend less time in doctor’s waiting rooms.</p>
+			<p>Take less time off work because you’ll be able to treat your blood pressure at a time that suits you.</p>
 		</div>
 	</div>
 	
