landing page copy improved

--- a/app/views/static_pages/landing_page.html.erb
+++ b/app/views/static_pages/landing_page.html.erb
@@ -2,8 +2,7 @@
 	<div id='strip1'>
 		<div id='strip1_content'>
 			<h1>Measurement of blood pressure</h1>
-			<p>Sign up and you'll get clear instructions on how to take a measurement of your blood pressure...</p>
-			<p>Then you will get personalised advice from UK GPs!</p>
+			<p id='landing_page_subtitle'>Sign up and you'll get clear instructions on blood pressure measurement</p>
 		</div>
 	</div>
 	
@@ -83,36 +82,39 @@
 	<div id='box1'>
 		<div class='box_content'>
 			<div class='title'>
-				<h2>Do it all from your home...</h2>
+				<h2>Get step by step instructions about blood pressure measurement…</h2>
 			</div>
-			<%= image_tag("house_not_copyright_cleared_small.jpeg") %>
-			<p>...or anywhere else that is convenient.</p>
-			<p>Did you know that up to 30% of people get incorrectly high readings when their blood pressure is measured at their doctors?</p>
-			<p>That’s why the latest expert advice recommends that you measure your blood pressure at home.</p>
+			<%= image_tag("Fotolia_healthtech_not_copyright_cleared_small.jpg") %>
+			<p>Follow our simple advice about the best way to measure your blood pressure</p>
+			<p>Then answer a few simple questions about your medical history and you’ll get clear advice about what to do next.</p>
+			<p>It really is that simple.</p>
+			<p>You’ll be able to make your own decisions about your own treatment in your own time.</p>
 		</div>
 	</div>
 	
 	<div id='box2'>
 		<div class='box_content'>
 			<div class='title'>
-				<h2>Save time…</h2>
+				<h2>Do it all from your home...</h2>
 			</div>
-			<%= image_tag("clock_not_copyright_cleared_small.jpg") %>
-			<p>Spend less time on the telephone trying to get an appointment.</p>
-			<p>Spend less time in doctor’s waiting rooms.</p>
-			<p>Take less time off work because you’ll be able to treat your blood pressure at a time that suits you.</p>
+			<%= image_tag("house_not_copyright_cleared_small.jpeg") %>
+			<p>...or anywhere else that is convenient.</p>
+			<p>Did you know that up to 30% of people get incorrectly high readings when their blood pressure is measured at their doctors?</p> 
+			<p>That’s why the latest expert advice recommends that you measure your blood pressure at home.</p>
+			<p>Then you’ll get all the advice you need from us.</p>
 		</div>
 	</div>
 	
 	<div id='box3'>
 		<div class='box_content'>
 			<div class='title'>
-				<h2>Get clear advice about how to treat your blood pressure…</h2>
+				<h2>Save time…</h2>
 			</div>
-			<%= image_tag("Fotolia_healthtech_not_copyright_cleared_small.jpg") %>
-			<p>Answer a few simple questions about your medical history and you’ll get clear advice about what to do next.</p>
-			<p>It really is that simple.</p>
-			<p>You’ll be able to make your own decisions about your own treatment in your own time.</p>
+			<%= image_tag("clock_not_copyright_cleared_small.jpg") %>
+			<p>Spend less time on the telephone trying to get an appointment.</p>
+			<p>Spend less time in doctors' waiting rooms.</p>
+			<p>Take less time off work.</p>
+			<p>Take control of your blood pressure today.</p>
 		</div>
 	</div>
 	
