--- a/app/assets/stylesheets/landing_page.css.scss
+++ b/app/assets/stylesheets/landing_page.css.scss
@@ -1,6 +1,14 @@
 #container {
   #content {
     #main {
+      #strip1 {
+        #strip1_content {
+          #landing_page_subtitle {
+            font-size: 1.4em;
+            margin-left: 0%;
+          }
+        }
+      }
       #strip2 {
         #strip2_content {
           #text_landing_page {
@@ -69,6 +77,7 @@
         background-color: #e7f0fd;
         margin-bottom: 30px;
         float: left;
+        width: 100%;
         
         .box_content {
           width: 90%;
@@ -77,7 +86,7 @@
           padding: 30px 0px 10px 0px;
           
           .title {
-            min-height: 50px;
+            min-height: 70px;
             
             h2 {
               font-size:1.8em;
@@ -104,7 +113,7 @@
         }
       }
       
-      #box2 {
+      #box3 {
         .box_content {
           img {
             width: 200px;
@@ -121,7 +130,7 @@
       #main {
         #box1, #box2, #box3 {
           width: 32%;
-          min-height: 600px;
+          min-height: 700px;
           
           .box_content {
             width: 85%;
@@ -133,8 +142,6 @@
         }
         
         #box4 {
-          width: 100%;
-          
           .box_content {
             img {
               float: right;
@@ -164,11 +171,11 @@
         }
         
         #box1, #box2 {
-          min-height: 600px;
+          min-height: 680px;
         }
         
         #box3, #box4 {
-          min-height: 700px;
+          min-height: 730px;
         }
       }
     }
