--- a/app/views/static_pages/landing_page.html.erb
+++ b/app/views/static_pages/landing_page.html.erb
@@ -123,7 +123,7 @@
 			<div class='title'>
 				<h2>Any questions? Ask a doctor!</h2>
 			</div>
-			<%= image_tag("woman_apple_small_3.jpg") %>
+			<%= image_tag("doc_with_laptop_small.jpg") %>
 			<p>Recent expert advice has changed the treatment of blood pressure. It has become much more simple.</p>
 			<p>That’s why you can take control of it without seeing a doctor.</p>
 			<p>We are two experienced UK GPs and you’ll find loads of clearly written advice on our website.</p>
