--- a/app/assets/stylesheets/scaffolds.css.scss
+++ b/app/assets/stylesheets/scaffolds.css.scss
@@ -283,7 +283,7 @@ a.button7:hover {
 
 
 #bottombar {
-  margin:0px 0px 10px 0px;
+  margin:0px 0px 20px 0px;
   font-size:1em;
   text-align:center;
 }
@@ -291,4 +291,9 @@ a.button7:hover {
 #bottombar a {
   margin:0px 2% 0px 0px;
   color:#000000;
+}
+
+#certs {
+  text-align:center;
+  margin-bottom: 10px;
 }
