--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -129,6 +129,10 @@ mixpanel.init("fa8043818be4dcbcce69f785817e7927");</script>
 			<span>&#169; 2014</span>
 		<% end %>
 	</div>
+	
+	<div id='certs'>
+		<a href="https://www.positivessl.com" style="font-family: arial; font-size: 10px; color: #212121; text-decoration: none;"><img src="https://www.positivessl.com/images-new/PositiveSSL_tl_trans.gif" alt="Positive SSL on a transparent background" title="Positive SSL on a transparent background" border="0" /></a>
+	</div>
 
 </div>
 
