--- a/app/views/static_pages/measurement-of-blood-pressure.html.erb
+++ b/app/views/static_pages/measurement-of-blood-pressure.html.erb
@@ -2,7 +2,7 @@
 	<div id='strip1'>
 		<div id='strip1_content'>
 			<h1>Measurement of blood pressure</h1>
-			<p id='landing_page_subtitle'>Sign up and you'll get clear instructions on blood pressure measurement</p>
+			<p id='landing_page_subtitle'>Sign up and you'll get FREE clear instructions on blood pressure measurement</p>
 		</div>
 	</div>
 	
@@ -46,12 +46,10 @@
 						</div>
   						<div id='sign_up_button'>
   							<button type='submit' class='button3 button8' onClick="ga('send', 'event', 'Button', 'Sign-up');">
-  								<span>Get instant advice about your blood pressure</span>
+  								<span>Get FREE instant advice about your blood pressure</span>
   							</button>
   						</div>
 						<% end %>
-						<p><span>FREE</span> 30 day trial</p>
-						<p>No obligation</p>
 					</div>
 				</div>
 			</div>
@@ -64,7 +62,7 @@
 					</tr>
 					<tr>
 						<td class='number'>2.</td>
-						<td>Get personalised advice from UK GPs</td>
+						<td>Get FREE personalised advice from UK GPs</td>
 					</tr>
 					<tr>
 						<td class='number'>3.</td>
@@ -132,6 +130,16 @@
 		<div class='clear_float'></div>
 	</div>
 	
+	<div class='clear_float'></div>
 	
+	<div id='bottom_strip'>
+		<div id='bottom_strip_content'>
+			<div id='sign_up_button'>
+  				<button id='anchor' class='button3 button8' >
+  					<span>Get FREE instant advice about your blood pressure</span>
+  				</button>
+  			</div>
+		</div>
+	</div>
 	
 </div>
