--- a/app/assets/stylesheets/scaffolds.css.scss
+++ b/app/assets/stylesheets/scaffolds.css.scss
@@ -184,7 +184,8 @@ a:hover {
   cursor:pointer;
 }
 
-a.button1:link, a.button1:visited {
+a.button1:link, a.button1:visited,
+a.button3:link, a.button3:visited, {
   color:#000000;
 }
 
