--- a/app/assets/stylesheets/info.css.scss
+++ b/app/assets/stylesheets/info.css.scss
@@ -59,7 +59,7 @@
         
           p {
             font-size:1.1em;
-            color: #000000;
+            color: #444444;
             margin: 15px 5px 0px 3%;
           
             span {
@@ -188,7 +188,7 @@
         }
         
         h3 {
-          font-family: Baskerville, serif;
+          //font-family: Baskerville, serif;
           font-size:1.5em;
           color: #033076;
           font-weight: normal;
@@ -198,7 +198,7 @@
         
         p {
           font-size:1.1em;
-          color: #000000;
+          color: #444444;
           margin: 10px 5px 30px 3%;
         }
         
@@ -340,7 +340,7 @@
         
           p {
             font-size:1.1em;
-            color: #000000;
+            color: #444444;
             padding: 15px 0px 0px 3%;
           }
             
@@ -516,7 +516,7 @@
         
         p {
           font-size:1.1em;
-          color: #000000;
+          color: #444444;
           padding: 15px 0px 0px 3%;
           
           .bold {
