new blood-pressure-treatment 2-stage landing page. More landing pages yet to be created

--- a/app/views/landing_pages/find-out-more.html.erb
+++ b/app/views/landing_pages/find-out-more.html.erb
@@ -127,5 +127,17 @@
 		</div>
 		<div class='clear_float'></div>
 	</div>
+	
+	<div class='clear_float'></div>
+	
+	<div id='bottom_strip'>
+		<div id='bottom_strip_content'>
+			<div id='sign_up_button'>
+  				<button id='anchor' class='button3 button8' >
+  					<span>Get FREE instant advice about your blood pressure</span>
+  				</button>
+  			</div>
+		</div>
+	</div>
 
 </div>
