--- a/app/views/static_pages/blood-pressure-treatment.html.erb
+++ b/app/views/static_pages/blood-pressure-treatment.html.erb
@@ -2,7 +2,7 @@
 	<div id='strip1'>
 		<div id='strip1_content'>
 			<h1>Blood Pressure Treatment</h1>
-			<p id='landing_page_subtitle'>Get FREE advice on treating your blood pressure from experienced UK GPs</p>
+			<p id='landing_page_subtitle'>Get advice on treating your blood pressure from experienced UK GPs</p>
 		</div>
 	</div>
 	
@@ -12,9 +12,9 @@
 				<h2>It's Friday morning...</h2>
 				<p>...and you’ve got a whole week’s work to do before the end of the day. Every morning you’ve been trying to get an appointment with your doctor. Every time you call it’s engaged. You try again, fingers crossed… On the third attempt… success!</p>
 				<p id='conversation'>
-					‘Hello, doctors’ surgery. How can I help?’<br />
-					‘Could I please make an appointment for a blood pressure check?’<br />
-					‘Sorry, there are no appointments left. You can try calling again tomorrow morning...’
+					"Hello, doctors’ surgery. How can I help?"<br />
+					"Could I please make an appointment for a blood pressure check?"<br />
+					"Sorry, there are no appointments left. You can try calling again tomorrow morning..."
 				</p>
 				<p><span class='black'>Problem solved!</span> With the help of the doctors at HomeBloodPressure.co.uk you can use a home blood pressure monitor to check <span class='italic'>and treat</span> your blood pressure anywhere, anytime. Giving you more time to spend on the things you love.</p>
 			</div>
