--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,140 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Measurement of blood pressure at home HomeBloodPressure.co.uk</title>
-  <%= stylesheet_link_tag    "application", media: "all", "data-turbolinks-track" => true %>
-  <%= javascript_include_tag "application", "data-turbolinks-track" => true %>
-  <%= csrf_meta_tags %>
-  <meta name="description" content="Measurement of blood pressure at home. No more time waiting at the doctor's." />
-  <meta name='viewport' content='initial-scale=1' />
+  <title>Measurement and treatment of blood pressure at home HomeBloodPressure.co.uk</title>
   
-  <!-- Google Analytics code -->
-  <script>
-  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-
-  ga('create', 'UA-45096969-1', 'homebloodpressure.co.uk');
-  ga('require', 'linkid', 'linkid.js');
-  ga('send', 'pageview');
-  </script>
+  <%= render 'layouts/main' %>
   
-  <!-- start Mixpanel -->
-  <script type="text/javascript">(function(e,b){if(!b.__SV){var a,f,i,g;window.mixpanel=b;a=e.createElement("script");a.type="text/javascript";a.async=!0;a.src=("https:"===e.location.protocol?"https:":"http:")+'//cdn.mxpnl.com/libs/mixpanel-2.2.min.js';f=e.getElementsByTagName("script")[0];f.parentNode.insertBefore(a,f);b._i=[];b.init=function(a,e,d){function f(b,h){var a=h.split(".");2==a.length&&(b=b[a[0]],h=a[1]);b[h]=function(){b.push([h].concat(Array.prototype.slice.call(arguments,0)))}}var c=b;"undefined"!==
-typeof d?c=b[d]=[]:d="mixpanel";c.people=c.people||[];c.toString=function(b){var a="mixpanel";"mixpanel"!==d&&(a+="."+d);b||(a+=" (stub)");return a};c.people.toString=function(){return c.toString(1)+".people (stub)"};i="disable track track_pageview track_links track_forms register register_once alias unregister identify name_tag set_config people.set people.set_once people.increment people.append people.track_charge people.clear_charges people.delete_user".split(" ");for(g=0;g<i.length;g++)f(c,i[g]);
-b._i.push([a,e,d])};b.__SV=1.2}})(document,window.mixpanel||[]);
-mixpanel.init("fa8043818be4dcbcce69f785817e7927");</script>
-<!-- end Mixpanel -->
-  
-  <!-- Send data to mixpanel -->
-  <% if flash[:alias] %>
-  	<script>
-  		mixpanel.alias('<%= flash[:alias] %>');
-  	</script>
-  <% end %>
-  
-  <% if flash[:identify] %>
-  	<script>
-  		mixpanel.identify('<%= flash[:identify] %>');
-  	</script>
-  <% end %>
-  
-  <% if flash[:people] %>
-  	<script>
-		mixpanel.people.set({
-			'$email': 		'<%= flash[:people][:email] %>',
-			'$created': '<%= flash[:people][:created] %>'
-		});
-		mixpanel.identify('<%= flash[:identify] %>');
-  	</script>
-  <% end %>
-  
-  <% if flash[:event] %>
-  	<script>
-  		var propertiesString = "<%= flash[:event_properties] %>";
-  		var propertiesArray = propertiesString.split(",");
-  		var propertiesHash = new Array();
-  		for (var i = 0; i < propertiesArray.length; i = i + 2) {
-    		propertiesHash[propertiesArray[i]] = propertiesArray[i+1];
-		}
-		mixpanel.track("<%= flash[:event] %>", propertiesHash);
-  	</script>
-  <% end %>
-  
-</head>
-<body>
-
-<div id="container">
-	
-	<div id='header'>
-	<div id='header_content'>
-
-		<div id='topbannertitle'>
-			<%= link_to("HomeBloodPressure.co.uk", account_router_path) %>
-		</div>
-		<div id='user_nav'>
-			<% if user_signed_in? %>
-				<div id='sign_out'>
-					<%= link_to(destroy_user_session_path, :class => 'button1', :method => :delete) do %>
-						<%= image_tag("padlock.gif", size: '9x12') %>
-						Sign out
-						<br />
-						<%= truncate(current_user.email, :length => 12) %>
-					<% end %>
-				</div>
-			<% else %>
-				<div id='sign_in'>
-    				<%= link_to(image_tag("padlock.gif", size: '9x12', :class => 'borderless_img') + " Sign in", new_user_session_path, :class => 'button1') %>
-    			</div>
-  			<% end %>
-  		</div>
-  		
-  		<div id='topmenu'>
-			<% if user_signed_in? %>
-			<div class='topmenucontent'>
-				<%= link_to 'Home', account_router_path %>
-			</div>
-			<div class='topmenucontent'>
-				<%= link_to 'Advice', info_path('home-blood-pressure') %>
-			</div>
-			<div class='topmenucontent'>
-				<%= link_to 'Features', static_pages_features_path %>
-			</div>
-			<div class='topmenucontent'>
-				<%= link_to 'Contact', new_message_path %>
-			</div>
-			<% end %>
-			
-		</div>
-		
-		<div class='clear_float'>
-		</div>
-
-	</div>
-	</div>
-	
-	<div id='content'>
-		<% if flash[:notice] %>
-			<div id="notice"><%= notice %></div>
-		<% end %>
-		<%= yield %>
-	</div>	
-
-	<div id='bottombar'>
-		<% if user_signed_in? %>
-			<%= link_to 'About us', static_pages_about_path %>
-			<%= link_to 'Contact us', new_message_path %>
-			<%= link_to 'Terms & Conditions', static_pages_tac_path %>
-			<span>&#169; 2014</span>
-		<% end %>
-	</div>
-	
-	<div id='certs'>
-		<a href="https://www.positivessl.com" target="_blank" style="font-family: arial; font-size: 10px; color: #212121; text-decoration: none;"><img src="https://www.positivessl.com/images-new/PositiveSSL_tl_trans.gif" alt="Positive SSL on a transparent background" title="Positive SSL on a transparent background" border="0" /></a>
-	</div>
-
-</div>
-
-</body>
 </html>
