--- a/app/assets/stylesheets/scaffolds.css.scss
+++ b/app/assets/stylesheets/scaffolds.css.scss
@@ -240,6 +240,9 @@ a.button7:hover {
 .button8 {
   background-color:#ff8000;
   font-size: 0.9em;
+  &:hover {
+    background-color:#ff9933;
+  }
 }
 
 .button4, .button5 {
