--- a/app/views/landing_pages/find_out_more.html.erb
+++ b/app/views/landing_pages/find_out_more.html.erb
@@ -1,8 +1,8 @@
 <div id='main'>
 	<div id='strip1'>
 		<div id='strip1_content'>
-			<h1>Blood Pressure Treatment</h1>
-			<p id='landing_page_subtitle'>Get FREE advice on treating your blood pressure from experienced UK GPs</p>
+			<h1><%= @title.titleize %></h1>
+			<p id='landing_page_subtitle'>Get advice on <%= @title %> from experienced UK GPs</p>
 		</div>
 	</div>
 	
@@ -45,7 +45,7 @@
 						<div id='tac_error_msg'>
 						</div>
   						<div id='sign_up_button'>
-  							<button type='submit' class='button3 button8' onClick="ga('send', 'event', 'Button', 'Sign-up');">
+  							<button type='submit' class='button3 button8'>
   								<span>Get FREE instant advice about your blood pressure</span>
   							</button>
   						</div>
