--- a/app/views/layouts/landing_page.html.erb
+++ b/app/views/layouts/landing_page.html.erb
@@ -1,13 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>HomeBloodPressure.co.uk</title>
-  	<%= stylesheet_link_tag    "application", media: "all", "data-turbolinks-track" => true %>
-  	<%= javascript_include_tag "application", "data-turbolinks-track" => true %>
-  	<%= csrf_meta_tags %>
-</head>
-<body>
-	Testing
-	<%= yield %>
-</body>
+	<title><%= @title.titleize %> HomeBloodPressure.co.uk</title>
+	<meta name="robots" content="noindex">
+	
+	<%= render 'layouts/main' %>
+
 </html>
