wip i18n for landing page

--- a/app/assets/stylesheets/landing_page.css.scss
+++ b/app/assets/stylesheets/landing_page.css.scss
@@ -25,9 +25,15 @@
               padding-right: 10px;
             }
             
+            p {
+              text-align: center;
+              font-size: 1.6em;
+              color: #033076;
+            }
+            
             #button {
-              width: 250px;
-              margin: 0px auto 0px auto;
+              width: 230px;
+              margin: 10px auto 20px auto;
               font-size: 1.7em;
             }
           }
