--- a/app/views/landing_pages/find_out_more.html.erb
+++ b/app/views/landing_pages/find_out_more.html.erb
@@ -2,7 +2,7 @@
 	<div id='strip1'>
 		<div id='strip1_content'>
 			<h1><%= @title.titleize %></h1>
-			<p id='landing_page_subtitle'>Get advice on <%= @title %> from experienced UK GPs</p>
+			<p id='landing_page_subtitle'>Get advice on <%= @subtitle %> from experienced UK GPs</p>
 		</div>
 	</div>
 	
