made devise new registrations partial consistent with landing page sign up form

--- a/app/views/devise/registrations/_new.html.erb
+++ b/app/views/devise/registrations/_new.html.erb
@@ -35,13 +35,11 @@
 	<div id='tac_error_msg'>
 	</div>
   	<div id='sign_up_button'>
-  		<button type='submit' class='button3 button8' onClick="ga('send', 'event', 'Button', 'Sign-up');">
+  		<button type='submit' class='button3 button8' >
   			<span>Get instant advice about your blood pressure</span>
   		</button>
   	</div>
 	<% end %>
-	<p><span>FREE</span> 30 day trial</p>
-	<p>No obligation</p>
 </div>
 </div>
 </div>
